# revm

./: Cargo.toml
bins/revm-test/: CHANGELOG.md
bins/revme/: CHANGELOG.md  Cargo.toml
crates/interpreter/: CHANGELOG.md  Cargo.toml
crates/interpreter/src/: interpreter.rs
crates/interpreter/src/instructions/: arithmetic.rs  host.rs  memory.rs  system.rs
crates/interpreter/src/instructions/host/: call_helpers.rs
crates/precompile/: CHANGELOG.md
crates/precompile/src/: bls12_381.rs
crates/primitives/: CHANGELOG.md  Cargo.toml
crates/primitives/src/: lib.rs  state.rs
crates/revm/: CHANGELOG.md  Cargo.toml
crates/revm/src/: evm.rs  evm_impl.rs  handler.rs  lib.rs
crates/revm/src/db/: in_memory_db.rs  states.rs
crates/revm/src/db/states/: bundle_account.rs  bundle_state.rs  cache.rs  cache_account.rs  mem_usage.rs  plain_account.rs  state.rs  transition_account.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/utils/src/metrics/: cachedb.rs  instruction.rs  metric.rs  mod.rs  types.rs  wrapper.rs
crates/utils/src/time_utils/: cycles.rs  mod.rs
