[workspace]
members = [
    "bins/revme",
    "bins/revm-test",
    "crates/revm",
    "crates/primitives",
    "crates/interpreter",
    "crates/precompile",
]
resolver = "2"
default-members = ["crates/revm"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
revm-utils = { git = "https://github.com/megaeth-labs/reth-perf-utils.git" }

[profile.release]
lto = true
codegen-units = 1
debug = true

[profile.ethtests]
inherits = "test"
opt-level = 3
