[package]
name = "revm-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = { version = "1.0", features = ["derive", "rc"], default-features = false }
serde = { version = "1.0", features = ["derive", "rc"] }
# serde_json = { version = "1.0", default-features = false }
serde_json = "1.0"
# serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_arrays = "0.1.0"
ctor = "0.2.5"

# [features]
# default = ["std"]

# std = [
#     "serde/std",
#     "serde_json/std",
# ]